--- a/index.css
+++ b/index.css
@@ -31,10 +31,19 @@ body {
     text-align: center;  
 }
 
-#table{
+table.tbl{
+    
+    margin-left: auto;
+    margin-right: auto;
+}   
+
+.tblTitle{
     display: flexbox;
-    align-self: center; 
+    text-align: center;
 }
+   
+
+
 
 #info {
     display: flexbox;
@@ -47,4 +56,5 @@ body {
     justify-content: flex-end;
     height:2em;
 }
+
 
